--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
     "name": "test-soft-service",
     "displayName": "TEST SOFT SERVICE",
     "description": "service extention for soft",
-    "version": "1.0.1",
-    "icon": "icon.png",
+    "version": "1.0.2",
     "publisher":"test-soft-service",
     "repository": {
         "type": "git",
@@ -18,7 +17,7 @@
     "contributes": {
         "snippets": [
             {
-                "language": "smarty",
+                "language": "tpl",
                 "path": "./snippets/snippets.code-snippets"
             }
         ]
